--- a/workflows/ci-cd.yml
+++ b/workflows/ci-cd.yml
@@ -86,5 +86,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
-        publish_branch: gh-pages
+        publish_branch: test
         keep_files: false
