--- a/workflows/ci-cd.yml
+++ b/workflows/ci-cd.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   test:
@@ -13,14 +12,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Show files
-      run: |
-        echo "Содержимое папки:"
-        ls -la
-        echo "Python файлы:"
-        find . -name "*.py" | head -5
+      uses: actions/checkout@v4
 
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -29,62 +21,44 @@ jobs:
 
     - name: Install packages
       run: |
-        pip install flask pytest bandit
+        pip install Flask bandit pytest
 
-    - name: Run tests
+    - name: Run simple test
       run: |
-        # Если есть тесты - запускаем
-        if [ -f "test_app.py" ]; then
-          python -m pytest test_app.py -v
+        # Просто проверяем что app.py существует
+        if [ -f "app.py" ]; then
+          echo "✓ app.py найден"
+          python -c "print('Python работает нормально')"
         else
-          echo "Тестов нет, пропускаем..."
+          echo "✗ app.py не найден"
+          exit 1
         fi
 
-    - name: Security check
+    - name: Run bandit security
       run: |
-        # Проверяем безопасность кода
-        bandit -r . || echo "Проверка завершена"
+        bandit -r . || echo "Bandit проверка завершена"
 
   changelog:
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
-    - name: Make script executable
+    - name: Create simple changelog
       run: |
-        chmod +x generate_changelog.sh
+        echo "# Changelog" > CHANGELOG.md
+        echo "" >> CHANGELOG.md
+        echo "## [v1.0.0] - $(date +'%Y-%m-%d')" >> CHANGELOG.md
+        echo "  - Initial release" >> CHANGELOG.md
+        echo "" >> CHANGELOG.md
+        
+        # Показываем что создали
+        cat CHANGELOG.md
 
-    - name: Generate changelog
-      run: |
-        # Используем дату как версию
-        VERSION="v$(date +'%Y.%m.%d')"
-        ./generate_changelog.sh $VERSION
-
-    - name: Commit changelog
-      run: |
-        git config --local user.email "github@action.com"
-        git config --local user.name "GitHub Action"
-        git add CHANGELOG.md
-        git commit -m "Update changelog [skip ci]" || echo "Нет изменений"
-        git push origin main || echo "Нечего пушить"
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: changelog
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload CHANGELOG as artifact
+      uses: actions/upload-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
-        publish_branch: gh-pages
-        keep_files: false
+        name: changelog
+        path: CHANGELOG.md
